--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "googleapis": "^123.0.0",
     "node-fetch": "^3.3.2",
     "simple-git": "^3.19.1",
+    "yargs": "^17.7.2",
     "ytdl-core": "^4.11.5"
   }
 }
